pyAAL/grammar/tspass/TSPASSParser.py
# Generated from java-escape by ANTLR 4.4
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .TSPASSListener import TSPASSListener
else:
    from TSPASSListener import TSPASSListener

class TSPASSParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__26=1
    T__25=2
    T__24=3
    T__23=4
    T__22=5
    T__21=6
    T__20=7
    T__19=8
    T__18=9
    T__17=10
    T__16=11
    T__15=12
    T__14=13
    T__13=14
    T__12=15
    T__11=16
    T__10=17
    T__9=18
    T__8=19
    T__7=20
    T__6=21
    T__5=22
    T__4=23
    T__3=24
    T__2=25
    T__1=26
    T__0=27
    ID=28
    INT=29
    NEWLINE=30
    WS=31
    BLANK=32
    STRING=33
    COMMENT=34

    tokenNames = [ "<INVALID>", "'sometime'", "']'", "'&'", "','", "'['", 
                   "'not'", "'('", "':'", "'unless'", "'false'", "'?'", 
                   "'until'", "'y'", "'next'", "'true'", "'->'", "'=>'", 
                   "')'", "'.'", "'<->'", "'always'", "'<=>'", "'='", "'x'", 
                   "'~'", "'|'", "'!'", "ID", "INT", "NEWLINE", "WS", "BLANK", 
                   "STRING", "COMMENT" ]

    RULE_x = 0
    RULE_y = 1
    RULE_h_lpar = 2
    RULE_h_rpar = 3
    RULE_h_lbar = 4
    RULE_h_rbar = 5
    RULE_h_dot = 6
    RULE_h_colon = 7
    RULE_h_equal = 8
    RULE_formula = 9
    RULE_atom = 10
    RULE_predicate = 11
    RULE_variable = 12
    RULE_constants = 13
    RULE_negation = 14
    RULE_conjunction = 15
    RULE_disjunction = 16
    RULE_implication = 17
    RULE_equivalence = 18
    RULE_uQuant = 19
    RULE_eQuant = 20
    RULE_utOperators = 21
    RULE_btOperators = 22
    RULE_always = 23
    RULE_snext = 24
    RULE_sometime = 25
    RULE_until = 26
    RULE_unless = 27

    ruleNames =  [ "x", "y", "h_lpar", "h_rpar", "h_lbar", "h_rbar", "h_dot", 
                   "h_colon", "h_equal", "formula", "atom", "predicate", 
                   "variable", "constants", "negation", "conjunction", "disjunction", 
                   "implication", "equivalence", "uQuant", "eQuant", "utOperators", 
                   "btOperators", "always", "snext", "sometime", "until", 
                   "unless" ]

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class XContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_x

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterX(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitX(self)




    def x(self):

        localctx = TSPASSParser.XContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_x)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(self.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class YContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_y

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterY(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitY(self)




    def y(self):

        localctx = TSPASSParser.YContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_y)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_lparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_lpar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_lpar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_lpar(self)




    def h_lpar(self):

        localctx = TSPASSParser.H_lparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_h_lpar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(self.T__20)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_rparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_rpar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_rpar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_rpar(self)




    def h_rpar(self):

        localctx = TSPASSParser.H_rparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_h_rpar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(self.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_lbarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_lbar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_lbar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_lbar(self)




    def h_lbar(self):

        localctx = TSPASSParser.H_lbarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_h_lbar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(self.T__22)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_rbarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_rbar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_rbar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_rbar(self)




    def h_rbar(self):

        localctx = TSPASSParser.H_rbarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_h_rbar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(self.T__25)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_dotContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_dot

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_dot(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_dot(self)




    def h_dot(self):

        localctx = TSPASSParser.H_dotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_h_dot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(self.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_colonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_colon

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_colon(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_colon(self)




    def h_colon(self):

        localctx = TSPASSParser.H_colonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_h_colon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(self.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_equalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_h_equal

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterH_equal(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitH_equal(self)




    def h_equal(self):

        localctx = TSPASSParser.H_equalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_h_equal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(self.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eQuant(self):
            return self.getTypedRuleContext(TSPASSParser.EQuantContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(TSPASSParser.NEWLINE)
            else:
                return self.getToken(TSPASSParser.NEWLINE, i)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TSPASSParser.FormulaContext)
            else:
                return self.getTypedRuleContext(TSPASSParser.FormulaContext,i)


        def negation(self):
            return self.getTypedRuleContext(TSPASSParser.NegationContext,0)


        def atom(self):
            return self.getTypedRuleContext(TSPASSParser.AtomContext,0)


        def h_lpar(self):
            return self.getTypedRuleContext(TSPASSParser.H_lparContext,0)


        def disjunction(self):
            return self.getTypedRuleContext(TSPASSParser.DisjunctionContext,0)


        def btOperators(self):
            return self.getTypedRuleContext(TSPASSParser.BtOperatorsContext,0)


        def uQuant(self):
            return self.getTypedRuleContext(TSPASSParser.UQuantContext,0)


        def h_rpar(self):
            return self.getTypedRuleContext(TSPASSParser.H_rparContext,0)


        def equivalence(self):
            return self.getTypedRuleContext(TSPASSParser.EquivalenceContext,0)


        def utOperators(self):
            return self.getTypedRuleContext(TSPASSParser.UtOperatorsContext,0)


        def conjunction(self):
            return self.getTypedRuleContext(TSPASSParser.ConjunctionContext,0)


        def implication(self):
            return self.getTypedRuleContext(TSPASSParser.ImplicationContext,0)


        def getRuleIndex(self):
            return TSPASSParser.RULE_formula

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitFormula(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TSPASSParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            token = self._input.LA(1)
            if token in [self.ID]:
                self.state = 75 
                self.atom()
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 76
                        self.match(self.NEWLINE) 
                    self.state = 81
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)


            elif token in [self.T__21, self.T__2]:
                self.state = 82 
                self.negation()
                self.state = 83 
                self.formula(0)
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 84
                        self.match(self.NEWLINE) 
                    self.state = 89
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)


            elif token in [self.T__0]:
                self.state = 90 
                self.uQuant()
                self.state = 91 
                self.formula(0)
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 92
                        self.match(self.NEWLINE) 
                    self.state = 97
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)


            elif token in [self.T__16]:
                self.state = 98 
                self.eQuant()
                self.state = 99 
                self.formula(0)
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 100
                        self.match(self.NEWLINE) 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)


            elif token in [self.T__26, self.T__13, self.T__6]:
                self.state = 106 
                self.utOperators()
                self.state = 107 
                self.formula(0)
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 108
                        self.match(self.NEWLINE) 
                    self.state = 113
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)


            elif token in [self.T__20]:
                self.state = 114 
                self.h_lpar()
                self.state = 115 
                self.formula(0)
                self.state = 116 
                self.h_rpar()
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 117
                        self.match(self.NEWLINE) 
                    self.state = 122
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)


            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 168
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = TSPASSParser.FormulaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 125
                        if not self.precpred(self._ctx, 1):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 129
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==TSPASSParser.NEWLINE:
                            self.state = 126
                            self.match(self.NEWLINE)
                            self.state = 131
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 132 
                        self.formula(2)
                        pass

                    elif la_ == 2:
                        localctx = TSPASSParser.FormulaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 133
                        if not self.precpred(self._ctx, 8):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 137
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==TSPASSParser.NEWLINE:
                            self.state = 134
                            self.match(self.NEWLINE)
                            self.state = 139
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 144
                        token = self._input.LA(1)
                        if token in [self.T__24]:
                            self.state = 140 
                            self.conjunction()

                        elif token in [self.T__1]:
                            self.state = 141 
                            self.disjunction()

                        elif token in [self.T__11, self.T__10]:
                            self.state = 142 
                            self.implication()

                        elif token in [self.T__7, self.T__5]:
                            self.state = 143 
                            self.equivalence()

                        else:
                            raise NoViableAltException(self)

                        self.state = 149
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==TSPASSParser.NEWLINE:
                            self.state = 146
                            self.match(self.NEWLINE)
                            self.state = 151
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 152 
                        self.formula(0)
                        self.state = 156
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 153
                                self.match(self.NEWLINE) 
                            self.state = 158
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                        pass

                    elif la_ == 3:
                        localctx = TSPASSParser.FormulaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 159
                        if not self.precpred(self._ctx, 4):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 160 
                        self.btOperators()
                        self.state = 161 
                        self.formula(0)
                        self.state = 165
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 162
                                self.match(self.NEWLINE) 
                            self.state = 167
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                        pass

             
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def h_lpar(self):
            return self.getTypedRuleContext(TSPASSParser.H_lparContext,0)


        def h_rpar(self):
            return self.getTypedRuleContext(TSPASSParser.H_rparContext,0)


        def constants(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TSPASSParser.ConstantsContext)
            else:
                return self.getTypedRuleContext(TSPASSParser.ConstantsContext,i)


        def predicate(self):
            return self.getTypedRuleContext(TSPASSParser.PredicateContext,0)


        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TSPASSParser.VariableContext)
            else:
                return self.getTypedRuleContext(TSPASSParser.VariableContext,i)


        def getRuleIndex(self):
            return TSPASSParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitAtom(self)




    def atom(self):

        localctx = TSPASSParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173 
            self.predicate()
            self.state = 191
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 174 
                self.h_lpar()
                self.state = 177
                token = self._input.LA(1)
                if token in [self.ID]:
                    self.state = 175 
                    self.variable()

                elif token in [self.T__17, self.T__12]:
                    self.state = 176 
                    self.constants()

                else:
                    raise NoViableAltException(self)

                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TSPASSParser.T__23:
                    self.state = 179
                    self.match(self.T__23)
                    self.state = 182
                    token = self._input.LA(1)
                    if token in [self.ID]:
                        self.state = 180 
                        self.variable()

                    elif token in [self.T__17, self.T__12]:
                        self.state = 181 
                        self.constants()

                    else:
                        raise NoViableAltException(self)

                    self.state = 188
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 189 
                self.h_rpar()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TSPASSParser.ID, 0)

        def getRuleIndex(self):
            return TSPASSParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = TSPASSParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TSPASSParser.ID, 0)

        def getRuleIndex(self):
            return TSPASSParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitVariable(self)




    def variable(self):

        localctx = TSPASSParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_constants

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterConstants(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitConstants(self)




    def constants(self):

        localctx = TSPASSParser.ConstantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            _la = self._input.LA(1)
            if not(_la==TSPASSParser.T__17 or _la==TSPASSParser.T__12):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NegationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_negation

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitNegation(self)




    def negation(self):

        localctx = TSPASSParser.NegationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_negation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            _la = self._input.LA(1)
            if not(_la==TSPASSParser.T__21 or _la==TSPASSParser.T__2):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_conjunction

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterConjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitConjunction(self)




    def conjunction(self):

        localctx = TSPASSParser.ConjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_conjunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(self.T__24)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DisjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_disjunction

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterDisjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitDisjunction(self)




    def disjunction(self):

        localctx = TSPASSParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_disjunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_implication

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.enterImplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, TSPASSListener ):
                listener.exitImplication(self)




    def implication(self):

        localctx = TSPASSParser.ImplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_implication)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            _la = self._input.LA(1)
            if not(_la==TSPASSParser.T__11 or _la==TSPASSParser.T__10):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EquivalenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TSPASSParser.RULE_equivalence
